--- a/src/scss/ui/_research.scss
+++ b/src/scss/ui/_research.scss
@@ -17,6 +17,8 @@
   box-shadow: var(--ui-box-shadow);
   overflow: hidden;
 
+  z-index: map-get($z-indexes, 'research');
+
   p {
     line-height: 1.4;
   }
